kube/storage/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nextcrm-storage
  namespace: ynoacamino

spec:
  selector:
    app: nextcrm-storage
  ports:
    - name: minio-api
      port: 9000
      targetPort: 9000
    - name: minio-console
      port: 9001
      targetPort: 9001
