kube/storage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nextcrm-storage
  namespace: ynoacamino
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    traefik.ingress.kubernetes.io/redirect-entry-point: https

spec:
  tls:
    - hosts:
        - nextcrm-storage.ynoacamino.me
      secretName: nextcrm-storage-tls
  rules:
    - host: nextcrm-storage.ynoacamino.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcrm-storage
                port:
                  number: 9000
